--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -19,7 +19,7 @@
           <div class="relative w-full h-full  md:border-r border-white  text-white hover:text-red-600 bg-black">
             <a href="{{ link.url }}">
               <img
-                src="{{ '416059130_18300274189181708_5071447815284573167_n.jpg' | asset_url }}{{ '415990198_18300274213181708_2894705610518394442_n.jpg' | asset_url }}"
+                src="https://cdn.shopify.com/s/files/1/0822/3037/8774/files/416059130_18300274189181708_5071447815284573167_n_a530ead7-e9db-4004-a1f5-974524c3949d.jpg?v=1720622667"
                 class="gradient-bg absolute inset-0 w-full h-full object-cover "
                 height=""
                 width=""
